fix: svg z-index

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ i {
 
 svg {
   position: absolute;
-  bottom: 15;
+  z-index: -1;
+  bottom: 0;
   left: 0;
 }
 
@@ -216,7 +217,8 @@ textarea {
   background-color: rgb(21, 76, 131);
 }
 
-.delete-item:hover, select:hover{
+.delete-item:hover,
+select:hover {
   background-color: rgb(46, 46, 46);
 }
 
@@ -658,7 +660,9 @@ i:hover {
   font-family: 'Inter', sans-serif;
 }
 
-.delete-item, select, option{
+.delete-item,
+select,
+option {
   background-color: rgb(107, 107, 107);
   border: none;
 }
